import org.jetbrains.kotlin.gradle.dsl.JvmTarget

plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.plugin.compose'
}

android {
    namespace 'com.better.nothing.music.vizualizer'
    compileSdk 36

    defaultConfig {
        applicationId "com.better.nothing.music.vizualizer"
        minSdk 34
        targetSdk 36
        versionCode 4
        versionName '2.8'
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        compose true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlin {
        compilerOptions {
            jvmTarget.set(JvmTarget.JVM_17)
            // Change JVM_1_8 to JVM_11 or JVM_17 depending on your project needs
        }
    }
}

dependencies {
    // 1. Keep your local SDK
    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])

    // 2. Compose BOM - Manages versions for all compose libs below
    implementation platform('androidx.compose:compose-bom:2026.03.01')

    // 3. Core Compose Libraries (Versions handled by BOM)
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.animation:animation'

    // 4. Material 3
    implementation("androidx.compose.material3:material3:1.4.0")
    implementation 'com.google.android.material:material:1.13.0'

    // 5. Activity & Lifecycle
    implementation 'androidx.activity:activity-compose:1.13.0'

    // 6. Standard Icons only (Small & fast)
    // REMOVED: material-icons-extended
    implementation 'androidx.compose.material:material-icons-extended:1.7.8'

    // 7. Legacy Support (Only if your Service/Activity extends AppCompatActivity)
    // If you use 'ComponentActivity', you can likely remove appcompat too.
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.compose.foundation:foundation-layout:1.10.6'
    implementation 'androidx.benchmark:benchmark-traceprocessor:1.4.1'
    implementation 'androidx.compose.runtime:runtime:1.10.6'

    // 8. Debugging
    debugImplementation 'androidx.compose.ui:ui-tooling'
}